# pure.py

./: .gitignore  .hadolint.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  RELEASE.md  makefile  pyproject.toml  setup.py  tea.yaml
.github/workflows/: add-version-tag.yml  bump-version.yml  ci.yml  publish.yml
config/: fish_prompt.fish  prompt.bash  prompt.elv  prompt.zsh
containers/: README.md  bash.Dockerfile  elvish.Dockerfile  fish.Dockerfile  ksh.Dockerfile  powershell.Dockerfile  pwsh.Dockerfile  python.Dockerfile  tcsh.Dockerfile  xonsh.Dockerfile  zsh.Dockerfile
install/: configure.bash  configure.elv  configure.fish  configure.zsh
pure/: __init__.py  colors.py  constants.py  current_working_path.py  prompt.py  prompt_symbol.py  repository.py  symbol.py  virtual_env.py
pure/theme/: README.md  tomorrow.json  tomorrow_night.json
tests/: colors_test.py  current_working_path_test.py  integration_test.py  prompt_symbol_test.py  prompt_test.py  repository_branch_name_test.py  repository_dirty_test.py  repository_pending_commits.py  repository_test.py  symbol_test.py  virtual_env_test.py
