[project]
name = "pure"
version = "2.1.0"
description = "Pretty, minimal and fast prompt for various shells"
authors = [
    {name = "Édouard Lopez", email = "contact@edouard-lopez.com"},
]
dependencies = [
    "colorful",
    "gitpython",
    "platformdirs>=3.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "setuptools",
    "wheel",
    "twine",
    "keyring",
    # "-e #egg=pure",
    "pytest",
    "pytest-cov",
    "docker",
    "black>=23.1.0",
    # "-e file:///${PROJECT_ROOT}/.#egg=pure",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
